--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@prisma/client": "^6.19.0",
     "@types/express": "^5.0.5",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "ioredis": "^5.8.2",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "16.0.1",
     "nodemon": "^3.1.10",
     "prisma": "^6.19.0",
@@ -26,6 +29,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
